# healthlink-backend

./: .dockerignore  .env  .gitignore  API_DOCS.md  CMakeLists.txt  Dockerfile  docker-compose.yml  fly.toml  vcpkg.json
bridge/base/: 0-healthlink-backend-namespace.yaml  backend-deployment.yaml  backend-expose.yaml  backend-service.yaml  default-network-policy.yaml  kustomization.yaml  mongo-deployment.yaml  mongo-expose.yaml  mongo-mongodb_data-persistentVolumeClaim.yaml  mongo-service.yaml
bridge/overlays/desktop/: backend-service.yaml  kustomization.yaml  mongo-mongodb_data-persistentVolumeClaim.yaml  mongo-service.yaml
src/: env_loader.h  main.cpp
src/controllers/: DoctorController.h  PatientController.h  TestController.h
src/core/linked_list/: LinkedList.h  Node.h
src/core/queue/: Queue.h  QueueNode.h
src/core/router/: ApiRouter.h
src/core/stack/: Stack.h  StackNode.h
src/core/tree/: ApiRouter.h  Tree.h  TreeNode.h
src/models/: Appointment.h  AppointmentStatus.h  DayAvailability.h  Department.h  Doctor.h  Notification.h  Patient.h  PatientHistory.h  Payment.h  Rating.h  TimeSlot.h  WeeklySchedule.h
src/repositories/: AppointmentRepository.h  DoctorRepository.h  NotificationRepository.h  PatientHistoryRepository.h  PatientRepository.h  PaymentRepository.h  RatingRepository.h  ScheduleRepository.h
src/services/: FirebaseAuth.h  MongoConnection.h  MongoService.h  NotificationGateway.h
src/utils/: StringUtils.h  env_loader.h
